<resources>
    <string name="app_name">Download Assistant</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_title">Download Assistant</string>
    <string name="notification_successful">Download Successful</string>
    <string name="notification_failed">Download Failed</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_image_loading_library_by_bumptech">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_current_repository_by_udacity">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_type_safe_http_client_for_android_and_java_by_square_inc">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download">Download</string>
    <string name="download_notification_channel_id" translatable="false">download_channel</string>
    <string name="download_notification_channel_name" translatable="true">Download Notification</string>
    <string name="glide">glide</string>
    <string name="udacity">udacity</string>
    <string name="retrofit">retrofit</string>
    <string name="custom_download">custom</string>
    <string name="glide_url">https://github.com/bumptech/glide</string>
    <string name="udacity_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/maste.zip</string>
    <string name="retrofit_url">https://github.com/square/retrofit</string>
    <string name="file_name">File name:</string>
    <string name="ok">OK</string>
    <string name="status">Status:</string>
    <string name="download_image">Download Image</string>
    <string name="downloading">Downloading</string>
    <string name="open">Open</string>
    <string name="add_url_button">Add Url Button</string>
    <string name="enter">Enter</string>
    <string name="enter_url">Enter Url</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
